@@ -8,4 +8,6 @@ meathive (kinqpinz.info)
 David Kierznowski (withdk.com)
 GNa (gnanet.net)
 srl (security.research.labs@gmail.com)
+
+Refactoring & bug fixes:
 dz_ruyk (lonely.ruyk@mail.ru)
