@@ -38,7 +38,7 @@
 #define FALSE 0
 #define TRUE 1
 
-#define DEBUG 1
+#define DEBUG 0
 
 #if DEBUG > 0
 
