@@ -1,3 +1,8 @@
+13/10/2013: dnsmap realeased at github.com/dzruyk/dnsmap
+* minor user interface changes
+* refactoring
+* bug fixes
+
 20/02/2010: dnsmap 0.30 released at www.gnucitizen.org
 * IPv6 support
 * Makefile included
